<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Translate">

    <Button
        android:id="@+id/offlineSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="68dp"
        android:text="@string/offlineSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="239dp"
        android:layout_marginTop="519dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="164dp"
        android:text="Listen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/translator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="519dp"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="164dp"
        android:text="Translate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/phraseChooser"
        android:layout_width="253dp"
        android:layout_height="39dp"
        android:textColor="#ffffff"
        android:background="#9E00B8"
        android:layout_marginStart="79dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="479dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/LanguageChooser"
        android:layout_width="253dp"
        android:layout_height="39dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="314dp"
        android:textColor="#ffffff"
        android:background="#039109"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_translation"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:layout_marginTop="461dp"
        android:layout_marginBottom="233dp"
        android:background="#070201"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="25dp"
        android:text="@string/chooseWord"
        app:layout_constraintBottom_toTopOf="@+id/phraseChooser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/chooseLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="307dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="405dp"
        android:text="@string/ChooseLanguages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>